cache 优化，getAndRefresh正常了 project/role_in 接口，使用缓存1小时重复调用只会使用缓存
